@@ -85,6 +85,7 @@ enum {
 	CHEAT_NEVERENDINGMARKETING,
 	CHEAT_RESETDATE,
 	CHEAT_ALLOW_ARBITRARY_RIDE_TYPE_CHANGES,
+	CHEAT_OWNALLLAND,
 };
 
 enum {
